--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input id="name" type="text" placeholder="Ismingiz">
     <input id="phone" type="text" placeholder="Telefon">
 
-    <button onclick="sendData()">Yuborish</button>
+    <button onclick="sendData()" class="btn">Yuborish</button>
 
     <p id="status"></p>
 </div>
@@ -22,3 +22,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
