--- a/index.html
+++ b/index.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mini App Form</title>
+    <meta charset="UTF-8">
+    <title>Mini App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Register</h2>
 
-  <input id="name" placeholder="Your name"><br><br>
-  <input id="phone" placeholder="Phone number"><br><br>
+<div class="container">
+    <h2>Ro‘yxatdan o‘tish</h2>
 
-  <button id="sendBtn">Send</button>
+    <input id="name" placeholder="Ismingiz">
+    <input id="phone" placeholder="Telefon raqam">
 
-  <p id="result"></p>
+    <button id="sendBtn">Yuborish</button>
 
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <p id="status"></p>
+</div>
 
-  <script>
-    const tg = window.Telegram.WebApp;
-    tg.expand();
-
-    document.getElementById("sendBtn").onclick = async function () {
-        const name = document.getElementById("name").value.trim();
-        const phone = document.getElementById("phone").value.trim();
-        const user_id = tg.initDataUnsafe.user?.id;
-
-        if (!name || !phone) {
-            alert("Iltimos barcha maydonlarni to‘ldiring!");
-            return;
-        }
-
-        const payload = { user_id, name, phone };
-        console.log("Yuborilayotgan:", payload);
-
-        const res = await fetch("https://miniapp-backend-ejgl.onrender.com/save", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(payload)
-        });
-
-        const data = await res.json();
-        document.getElementById("result").innerText = JSON.stringify(data);
-        console.log("Server javobi:", data);
-    };
-  </script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
