--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="name" placeholder="Ismingiz">
     <input id="phone" placeholder="Telefon raqam">
 
-    <button id="sendBtn">Yuborish</button>
+    <button id="sendBtn">Yuborish >></button>
 
     <p id="status"></p>
 </div>
@@ -22,3 +22,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
