--- a/singup.html
+++ b/singup.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ro‘yxatdan o‘tish</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-
 <body>
 <div class="container">
-    <h1>Sign Up</h1>
-
-    <input id="name" placeholder="Ismingiz">
-    <input id="phone" placeholder="Telefon (+998...)" type="tel">
-
-    <button onclick="next()">Davom etish</button>
+    <h2>Sign Up</h2>
+    <input id="name" placeholder="Ismingiz"><br>
+    <input id="phone" placeholder="Telefon (+998...)"><br>
+    <input id="password" type="password" placeholder="Parol"><br>
+    <button onclick="signup()">Ro'yxatdan o'tish</button>
+    <p id="status"></p>
 </div>
 
 <script>
-function next() {
+async function signup() {
     const name = document.getElementById("name").value.trim();
     const phone = document.getElementById("phone").value.trim();
+    const password = document.getElementById("password").value.trim();
+    const backend = "https://miniapp-backend-ejgl.onrender.com/signup";
 
-    if (!name || !phone) {
-        alert("Ma'lumotlar to‘liq emas!");
-        return;
-    }
-
-    localStorage.setItem("reg_name", name);
-    localStorage.setItem("reg_phone", phone);
-
-    window.location.href = "password.html";
+    const res = await fetch(backend,{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body: JSON.stringify({ name, phone, password })
+    });
+    const data = await res.json();
+    document.getElementById("status").innerText = data.error || data.message;
+    if (data.success) window.location.href="profile.html";
 }
 </script>
-
 </body>
 </html>
