--- a/login.html
+++ b/login.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kirish</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-
 <body>
 <div class="container">
-    <h1>Login</h1>
-
-    <input id="phone" placeholder="Telefon (+998...)">
-    <input id="password" placeholder="Parol" type="password">
-
-    <button onclick="login()">Kirish</button>
-
-    <div id="status"></div>
+    <h2>Sign Up</h2>
+    <input id="name" placeholder="Ismingiz"><br>
+    <input id="phone" placeholder="Telefon (+998...)"><br>
+    <input id="password" type="password" placeholder="Parol"><br>
+    <button onclick="signup()">Ro'yxatdan o'tish</button>
+    <p id="status"></p>
 </div>
 
 <script>
-async function login() {
+async function signup() {
+    const name = document.getElementById("name").value.trim();
     const phone = document.getElementById("phone").value.trim();
     const password = document.getElementById("password").value.trim();
+    const backend = "https://miniapp-backend-ejgl.onrender.com/signup";
 
-    const backend = "https://miniapp-backend-ejgl.onrender.com/login";
-
-    const res = await fetch(backend, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ phone, password })
+    const res = await fetch(backend,{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body: JSON.stringify({ name, phone, password })
     });
-
-    let data = await res.json();
-
-    if (data.success) {
-        localStorage.setItem("user_name", data.user.name);
-        window.location.href = "profile.html";
-    } else {
-        document.getElementById("status").innerText = data.error;
-    }
+    const data = await res.json();
+    document.getElementById("status").innerText = data.error || data.message;
+    if (data.success) window.location.href="profile.html";
 }
 </script>
-
 </body>
 </html>
