--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <input id="phone" placeholder="Telefon (+998...)">
     <input id="password" type="password" placeholder="Parol">
 
-    <button onclick="login()">Kirish</button>
+    <button onclick="login()">Kirish17</button>
     <p id="status"></p>
 </div>
 
@@ -39,4 +39,5 @@ async function login() {
 </script>
 </body>
 </html>
+
 
