--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+  <meta charset="utf-8">
+  <title>MiniApp - Start</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
-<div class="container">
-    <h1>Welcome 17</h1>
-    <button onclick="go('singup.html')">Sign Up</button>
-    <button onclick="go('login.html')">Login</button>
-</div>
+  <div class="container">
+    <h1>Ro'yxatdan o'tish</h1>
+    <button id="tgSignup">Telegram orqali ro'yxatdan o'tish</button>
+    <div class="sm">Yoki</div>
+    <button onclick="location.href='login.html'" class="linkbtn">Login</button>
+    <p id="error"></p>
+  </div>
+
+<script>
+document.getElementById("tgSignup").addEventListener("click", async () => {
+  const userId = window.Telegram?.WebApp?.initDataUnsafe?.user?.id;
+  if (!userId) {
+    document.getElementById("error").innerText = "Iltimos, mini appni Telegram ichida oching.";
+    return;
+  }
+  // request send-code
+  const r = await post("/send-code", { user_id: String(userId) });
+  if (r.success) {
+    location.href = "verify.html";
+  } else {
+    document.getElementById("error").innerText = r.error || "Kod yuborilmadi";
+  }
+});
+</script>
 </body>
 </html>
-
