--- a/password.html
+++ b/password.html
@@ -1,58 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Parol yaratish</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <meta charset="utf-8">
+  <title>Verify</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="app.js"></script>
 </head>
-
 <body>
-<div class="container">
-    <h1>Parol yaratish</h1>
-
-    <input id="password" type="password" placeholder="Parol">
-
-    <button onclick="save()">Ro‘yxatdan o‘tish</button>
-
-    <div id="status"></div>
-</div>
+  <div class="container">
+    <h1>Kodni kiriting</h1>
+    <input id="code" placeholder="6 xonali kod" maxlength="6" />
+    <button id="verifyBtn">Keyingi</button>
+    <p id="error"></p>
+  </div>
 
 <script>
-async function save() {
-    const password = document.getElementById("password").value.trim();
-
-    if (!password) {
-        alert("Parol kiriting!");
-        return;
-    }
-
-    const name = localStorage.getItem("reg_name");
-    const phone = localStorage.getItem("reg_phone");
-
-    const backend = "https://miniapp-backend-ejgl.onrender.com/signup";
-
-    const payload = {
-        name,
-        phone,
-        password,
-        user_id: Telegram.WebApp.initDataUnsafe?.user?.id
-    };
-
-    let res = await fetch(backend, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
-    });
-
-    let data = await res.json();
-
-    if (data.success) {
-        window.location.href = "profile.html";
-    } else {
-        document.getElementById("status").innerText = data.error;
-    }
-}
+document.getElementById("verifyBtn").addEventListener("click", async () => {
+  const code = document.getElementById("code").value.trim();
+  const userId = window.Telegram?.WebApp?.initDataUnsafe?.user?.id;
+  if (!code || code.length !== 6) { document.getElementById("error").innerText = "6 xonali kod kiriting"; return; }
+  const r = await post("/verify-code", { user_id: String(userId), code });
+  if (r.success) {
+    // ok -> set-profile
+    location.href = "set-profile.html";
+  } else {
+    document.getElementById("error").innerText = r.error || "Kod xato";
+  }
+});
 </script>
-
 </body>
 </html>
