--- a/login.html
+++ b/login.html
@@ -1,43 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
-<div class="container">
-    <h2>Login</h2>
-
-    <input id="phone" placeholder="Telefon (+998...)">
-    <input id="password" type="password" placeholder="Parol">
-
-    <button onclick="login()">Kirish17</button>
-    <p id="status"></p>
-</div>
+  <div class="container">
+    <h1>Kirish</h1>
+    <input id="name" placeholder="Ismingiz" />
+    <input id="password" type="password" placeholder="Parol" />
+    <button id="loginBtn">Kirish</button>
+    <p id="error"></p>
+  </div>
 
 <script>
-async function login() {
-    const phone = document.getElementById("phone").value.trim();
-    const password = document.getElementById("password").value.trim();
+document.getElementById("loginBtn").addEventListener("click", async () => {
+  const name = document.getElementById("name").value.trim();
+  const password = document.getElementById("password").value.trim();
+  if (!name || !password) { document.getElementById("error").innerText = "To'ldiring"; return; }
 
-    const res = await fetch("https://miniapp-backend-ejgl.onrender.com/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ phone, password })
-    });
-
-    const data = await res.json();
-
-    if (data.error) {
-        document.getElementById("status").innerText = data.error;
-        return;
-    }
-
-    localStorage.setItem("user", JSON.stringify(data.user));
-
-    window.location.href = "profile.html";
-}
+  const r = await post("/login", { name, password });
+  if (r.success) {
+    localStorage.setItem("user", JSON.stringify(r.user));
+    location.href = "profile.html";
+  } else {
+    document.getElementById("error").innerText = r.error || "Xato";
+  }
+});
 </script>
 </body>
 </html>
-
-
