--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
-<button id="tgAuth">Telegram orqali ro'yxatdan o'tish</button>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>MiniApp - Start</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="app.js"></script>
+</head>
+<body>
+  <div class="container">
+    <h1>Ro'yxatdan o'tish</h1>
+    <button id="tgSignup">Telegram orqali ro'yxatdan o'tish</button>
+    <div class="sm">Yoki</div>
+    <button onclick="location.href='login.html'" class="linkbtn">Login</button>
+    <p id="error"></p>
+  </div>
 
 <script>
-document.getElementById("tgAuth").addEventListener("click", async () => {
-    const tg = window.Telegram.WebApp;
-    const chat_id = tg.initDataUnsafe.user.id;
-
-    let send = await fetch("https://miniapp.onrender.com/send-code", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ chat_id })
-    });
-
-    let res = await send.json();
-    if (res.success) {
-        window.location.href = "verify.html?chat_id=" + chat_id;
-    } else {
-        alert("Kod yuborilmadi");
-    }
+document.getElementById("tgSignup").addEventListener("click", async () => {
+  const userId = window.Telegram?.WebApp?.initDataUnsafe?.user?.id;
+  if (!userId) {
+    document.getElementById("error").innerText = "Iltimos, mini appni Telegram ichida oching.";
+    return;
+  }
+  const r = await post("/send-code", { user_id: String(userId) });
+  if (r.success) location.href = "verify.html";
+  else document.getElementById("error").innerText = r.error || "Kod yuborilmadi";
 });
 </script>
+</body>
+</html>
